# DB-Final

./: .gitignore  README.md
client/: Dockerfile  docker-compose.yml
client/app/: index.py  mongodb.py
client/app/dialognlu/readers/: goo_format_reader.py
other_files/: zalkikar_p2_diagram.erwin  zalkikar_p2_schema.sql
server/: .env  Cargo.toml  insurance.db
server/dbstmts/: create_db.sql  load_db.sql  runit.sh
server/src/: configuration.rs  lib.rs  main.rs
server/src/config/: configuration.yaml
server/src/handlers/: account_handlers.rs  customer_handlers.rs  customer_to_account_handlers.rs  db_context.rs  genmodelin_handlers.rs  mod.rs  product_handlers.rs
server/src/models/: account.rs  customer.rs  genmodelin.rs  mod.rs  product.rs
server/src/routes/: account_routes.rs  customer_routes.rs  genmodelin_routes.rs  mod.rs  product_routes.rs
